v1.3.0: Per-permission max speed overrides, split fly/walk command permissions, flyspeedlimit.speed as parent